manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82023052"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82023052"
  template:
    metadata:
      labels:
        app: "82023052"
    spec:
      containers:
        - name: "82023052"
          image: ceappacr.azurecr.io/82023052
          ports:
          - containerPort: 8080
